@@ -36,6 +36,7 @@ Bugs fixed
 - Bug 2901 - Add CommandLine::Parse (const std::vector<std::string>> args)
 - Bug 2461 - CommandLine should handle non-option arguments
 - Bug 2801 - FdNetDevice device MTU is not set correctly
+- Bug 2819 - FqCoDel handling of non-IP packets
 
 Known issues
 ------------
